Fri Jul 16 02:30:03 CEST 2004 (tk)
----------------------------------
  * libclamav: fix bug in memory management (thanks to Nigel)

Fri Jul 16 00:38:46 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: do not report I/O error on bad e_lfanew's

Wed Jul 14 13:31:41 CEST 2004 (tk)
----------------------------------
  * libclamav: fix detection of mail files

Wed Jul 14 11:17:58 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Added --dont-wait and --advisory options

Tue Jul 13 18:37:23 CEST 2004 (tk)
----------------------------------
  * libclamav: upx: fix potential infinite loop (aCaB)

Tue Jul 13 05:24:07 CEST 2004 (tk)
----------------------------------
  * libclamav: initial support for MD5 signatures

Mon Jul 12 16:03:11 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: fix decoding of hex char encoding
	(spotted by Tomasz Klim)
  * libclamav/filetypes.c: add '<script' tags to HTML rule set

Sun Jul 11 16:39:42 CEST 2004 (tk)
----------------------------------
  * libclamav: scanners: scan raw executables before trying to unpack them
               (requested by Christoph Cordes and Tomasz Papszun)

Fri Jul  9 04:14:37 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: detect skewed UPX1 (patch by aCaB)
  * libclamav: use new rule set for HTML detection (thanks to Trog)

Thu Jul  8 23:23:34 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Validate arguments given to inet_ntop. This
		is needed for machines that can't always get hostnames
		right, presumably broken hosts file or DNS or possibly
		connecting to sendmail incorrectly

Thu Jul  8 19:12:14 CEST 2004 (tk)
----------------------------------
  * libclamav: read .db3 files from cvd

Thu Jul  8 15:39:29 CEST 2004 (tk)
----------------------------------
  * libclamav: extend engine to support character alternatives (a|b|..|z)
	       and distance limits in multipattern signatures (exact: {n}